cc: Always create PlaybackImageProvider for raster playback.

The PlaybackImageProvider is required for using the compositor's image
decode cache during raster. Currently we conditionally create it if the
images are known to exist on a tile from discardable image analysis.
This results in an expectation for skia to implement some optimizations
assumed during analysis. Instead always create the provider to ensure
more predictable behaviour.

R=ericrk@chromium.org

Bug: 794690
Cq-Include-Trybots: master.tryserver.blink:linux_trusty_blink_rel;master.tryserver.chromium.android:android_optional_gpu_tests_rel
Change-Id: I2e21a88697fd400b43eb54fa6b63e73c591592d5
Reviewed-on: https://chromium-review.googlesource.com/826691
Reviewed-by: Eric Karl <ericrk@chromium.org>
Commit-Queue: Khushal <khushalsagar@chromium.org>
Cr-Commit-Position: refs/heads/master@{#524264}
Former-commit-id: fe9adb97d4c4ca7ee44130198d39d18af146b299